--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       <span class="line1">ED & JOHN'S</span>
       <span class="line2">GAME DEV JOURNEY</span>
     </h1>
-    <p class="tagline">Three projects that take you from complete beginner to building real games your friends can play. Each project teaches you new skills — and how to use Claude as your coding partner.</p>
+    <p class="tagline">Four projects that take you from complete beginner to building real games your friends can play. Each project teaches you new skills — and how to use Claude as your coding partner.</p>
   </div>
 
   <div class="progress-section">
