--- a/project-4-geometry-dash.html
+++ b/project-4-geometry-dash.html
@@ -416,6 +416,7 @@
     <a href="project-2-roblox-adventure.html">2</a>
     <a href="project-3-mobile-arcade.html">3</a>
     <a href="project-4-geometry-dash.html" class="active">4</a>
+    <a href="fun-zone.html">Fun</a>
   </div>
 </nav>
 
