--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
   .project-card.p4 { border-left: 4px solid #00d4ff; }
   .project-card.p4:hover { border-color: #00d4ff; box-shadow: 0 10px 40px rgba(0,212,255,0.1); }
 
+  .project-card.p5 { border-left: 4px solid #ff9f1c; }
+  .project-card.p5:hover { border-color: #ff9f1c; box-shadow: 0 10px 40px rgba(255,159,28,0.1); }
+
   .project-num {
     width: 56px;
     height: 56px;
@@ -381,6 +384,20 @@
           <span class="tag intermediate-plus">Intermediate+</span>
           <span class="tag">Canvas / Audio</span>
           <span class="tag">Level Editor</span>
+        </div>
+      </div>
+      <div class="project-arrow">→</div>
+    </a>
+
+    <a href="fun-zone.html" class="project-card p5">
+      <div class="project-num" style="background: rgba(255,159,28,0.12); color: #ff9f1c;">🎲</div>
+      <div class="project-info">
+        <h3>🎲 Fun Zone</h3>
+        <div class="desc">Take a break! Jokes, cool facts, and random fun — filtered by gaming, coding, science, and more.</div>
+        <div class="tags">
+          <span class="tag" style="color: #ff9f1c; border-color: rgba(255,159,28,0.3);">Jokes</span>
+          <span class="tag" style="color: #2ec4b6; border-color: rgba(46,196,182,0.3);">Cool Facts</span>
+          <span class="tag">Break Time</span>
         </div>
       </div>
       <div class="project-arrow">→</div>
