--- a/project-1-battle-cards.html
+++ b/project-1-battle-cards.html
@@ -347,6 +347,7 @@
     <a href="project-2-roblox-adventure.html">2</a>
     <a href="project-3-mobile-arcade.html">3</a>
     <a href="project-4-geometry-dash.html">4</a>
+    <a href="fun-zone.html">Fun</a>
   </div>
 </nav>
 
