--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
   .project-card.p5 { border-left: 4px solid #ff9f1c; }
   .project-card.p5:hover { border-color: #ff9f1c; box-shadow: 0 10px 40px rgba(255,159,28,0.1); }
 
+  .project-card.p6 { border-left: 4px solid #6c63ff; }
+  .project-card.p6:hover { border-color: #6c63ff; box-shadow: 0 10px 40px rgba(108,99,255,0.1); }
+
   .project-num {
     width: 56px;
     height: 56px;
@@ -398,6 +401,20 @@
           <span class="tag" style="color: #ff9f1c; border-color: rgba(255,159,28,0.3);">Jokes</span>
           <span class="tag" style="color: #2ec4b6; border-color: rgba(46,196,182,0.3);">Cool Facts</span>
           <span class="tag">Break Time</span>
+        </div>
+      </div>
+      <div class="project-arrow">→</div>
+    </a>
+
+    <a href="vocab-trainer.html" class="project-card p6">
+      <div class="project-num" style="background: rgba(108,99,255,0.12); color: #6c63ff;">📚</div>
+      <div class="project-info">
+        <h3>📚 Vocab Trainer</h3>
+        <div class="desc">Learn French, Russian, Latin & Greek vocab. Pick a category, take a quiz, build custom word lists, and track your scores.</div>
+        <div class="tags">
+          <span class="tag" style="color: #6c63ff; border-color: rgba(108,99,255,0.3);">Languages</span>
+          <span class="tag" style="color: #00c853; border-color: rgba(0,200,83,0.3);">Quizzes</span>
+          <span class="tag">Custom Lists</span>
         </div>
       </div>
       <div class="project-arrow">→</div>
