--- a/project-4-geometry-dash.html
+++ b/project-4-geometry-dash.html
@@ -417,6 +417,7 @@
     <a href="project-3-mobile-arcade.html">3</a>
     <a href="project-4-geometry-dash.html" class="active">4</a>
     <a href="fun-zone.html">Fun</a>
+    <a href="vocab-trainer.html">Vocab</a>
   </div>
 </nav>
 
