--- a/fun-zone.html
+++ b/fun-zone.html
@@ -338,6 +338,7 @@
     <a href="project-3-mobile-arcade.html">3</a>
     <a href="project-4-geometry-dash.html">4</a>
     <a href="fun-zone.html" class="active">Fun</a>
+    <a href="vocab-trainer.html">Vocab</a>
   </div>
 </nav>
 
