--- a/project-2-roblox-adventure.html
+++ b/project-2-roblox-adventure.html
@@ -397,6 +397,7 @@
     <a href="project-3-mobile-arcade.html">3</a>
     <a href="project-4-geometry-dash.html">4</a>
     <a href="fun-zone.html">Fun</a>
+    <a href="vocab-trainer.html">Vocab</a>
   </div>
 </nav>
 
