--- a/project-3-mobile-arcade.html
+++ b/project-3-mobile-arcade.html
@@ -387,6 +387,7 @@
     <a href="project-3-mobile-arcade.html" class="active">3</a>
     <a href="project-4-geometry-dash.html">4</a>
     <a href="fun-zone.html">Fun</a>
+    <a href="vocab-trainer.html">Vocab</a>
   </div>
 </nav>
 
